# workbench

./: .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  LICENSE  README.md  alembic.ini  config.example.yml  docker-compose.yml  entrypoint.sh  init-db.sh  pyproject.toml
docs/adr/: 0001-messenger-as-notification-only.md  0002-extract-produces-independent-items.md  0003-async-pipeline-with-jobs.md  0004-zep-as-parallel-knowledge-layer.md  0005-yaml-config-with-typed-providers.md  0006-postgres-over-sqlite.md  0007-durable-queues-with-llm-scoring.md  0008-src-layout-and-versioning.md
docs/memory/: MEMORY.md  project_meta_internal_pivot.md  project_tech_decisions.md
docs/plans/: 2026-05-27-phase-1a-core-triage-loop.md
docs/specs/: 2026-05-21-workbench-design.md  2026-05-27-zep-memory-layer-design.md
plans/: phase-1-plan.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: process.md  setup.md  sources.md  status.md  triage.md
plugin/config/: config.json
scripts/: e2e-setup.sh  manage-service.sh  workbench-env.sh  workbench-start.sh
server/: Dockerfile  auth.py  main.py  models.py  requirements.txt
server/api/: filter_rules.py  items.py  process.py  sources.py  triage.py
server/mcp/: tools.py
server/memory/: base.py  noop.py
server/pipeline/: engine.py  filter.py  (+4 more)
specs/: 2026-05-21-workbench-design.md
tests/: conftest.py  test_anthropic_llm.py  test_api.py  test_claude_provider.py  test_config.py  test_google_chat.py  test_memory.py  test_models.py  test_pipeline.py  test_queue_scorer.py  test_queue_worker.py  test_registry.py  test_storage.py
(+112 files in other folders)
